# SLM

./: .gitmodules  CMakeLists.txt  Makefile
inc/: bam2count.hpp  bam_utils.hpp  binning.hpp  context.hpp  fasta2kmer.hpp  slmseg.hpp  verbose.hpp
src/: bam2count.cpp  bam_utils.cpp  binning.cpp  fasta2kmer.cpp  main.cpp  segment.cpp
